<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Patience Training</string>
    <string name="action_settings">Settings</string>
    <string name="locked_title">Locked Rewards</string>
    <string name="unlocked_title">Unlocked Rewards</string>

    <!-- Start of time strings -->
    <string name="countdown">
        For <xliff:g example="5 days" id="time">%s</xliff:g>
    </string>
    <string name="duration">
        <xliff:g example="5" id="hours">%d</xliff:g> hours, <xliff:g example="0" id="timeQual">%d</xliff:g> days, <xliff:g example="62" id="timeQual">%d</xliff:g> weeks
    </string>

    <string name="duration_title">Set a duration</string>
    <string name="second">Seconds</string>
    <string name="hour">Hours</string>
    <string name="day">Days</string>
    <string name="week">Weeks</string>
    <string name="month">Months</string>
    <string name="year">Years</string>
    <string name="time"><xliff:g example="5.1" id="timeQuant">%.2f</xliff:g>
        <xliff:g example="days" id="timeQual">%s</xliff:g></string>
    <!-- End of time strings -->

    <!-- Start of click dialog unlocked strings -->
    <string name="waited_unlocked">You have waited: <xliff:g example="5 days" id="time">%s</xliff:g> to
        <xliff:g example="buy a new phone" id="rewardName">%s</xliff:g> costing
        <xliff:g example="5.1" id="cost">%.2f</xliff:g></string>
    <string name="collect_button">Collect your reward!</string>
    <!-- End of click dialog unlocked strings -->
    <string name="imageContentDescription">Image of your reward</string>
    <string name="delete_confirmation">Are you sure you want to delete this reward?</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <!-- Start of click dialog locked strings -->
    <string name="waited_locked">You have waited: <xliff:g example="5 days" id="time">%s</xliff:g>
        out of <xliff:g example="5 days" id="time">%s</xliff:g> to
        <xliff:g example="buy a new phone" id="rewardName">%s</xliff:g></string>
    <string name="wait_button">Wait for your reward!</string>
    <!-- End of click dialog locked strings -->

    <!-- Start of modify activity strings -->

    <!-- Layout Strings -->
    <string name="title_activity_add_reward">Add a reward</string>
    <string name="title_activity_modify_reward">Edit a reward</string>
    <string name="name_label">Name</string>
    <string name="name_placeholder">Name of item/reward</string>
    <string name="price_label">Price</string>
    <string name="price_placeholder">£0 – 500</string>
    <string name="duration_label">Duration:</string>
    <string name="hour_placeholder">2 hours</string>
    <string name="day_placeholder">5 days</string>
    <string name="week_placeholder">62 weeks</string>
    <string name="link_label">Link</string>
    <string name="link_hint">http://www.site-to-buy-reward.com</string>
    <string name="upload_label">Upload image</string>
    <string name="gallery_button">Select image from gallery</string>
    <string name="gallery_icon_description">Icon for the image gallery button</string>
    <string name="camera_button">Take a new photo</string>
    <string name="camera_icon_description">Icon for the camera button</string>
    <string name="remove_icon_description">Icon for the remove image button</string>
    <string name="notification_label">Set notification </string>
    <string name="http">http://</string>
    <string name="http_link">http://<xliff:g example="www.example.com" id="link">%s</xliff:g></string>
    <string name="https">https://</string>

    <!-- Error strings -->
    <string name="missing_input">Error: please enter a <xliff:g example="name for your reward." id="field">%s</xliff:g></string>
    <string name="missing_name">name for your reward.</string>
    <string name="missing_duration">duration that you wish to wait for.</string>
    <string name="invalid_link">The link you entered is not a valid URL.</string>

    <!-- End of modify activity strings -->

    <!-- Start of notification strings -->

    <string name="notification_title">A reward has unlocked!</string>
    <string name="notification_text">Your reward \'<xliff:g example="Buy a new phone" id="rewardName">%s</xliff:g>\' is ready!</string>
    <string name="channel_name">Unlocked Rewards</string>
    <string name="channel_description">Notifications will appear when a new reward is unlocked.</string>

    <!-- End of notification strings -->


    <!-- Start of signin activity strings -->

    <string name="signout">Sign out</string>
    <string name="goog_account">Signing into Google.</string>
    <string name="auth_serv">Connecting to server.</string>
    <string name="success">Signed in.</string>
    <string name="skip">You are already Signed in.</string>
    <string name="goog_error">There was an error with your Google account.</string>
    <string name="serv_error">There was an error authenticating your Google account.</string>
    <string name="success_signout">Signed out.</string>

    <!-- End of signin activity strings -->

    <!-- Start of leaderboard strings -->
    <string name="leaderboard_title">Leaderboard</string>
    <string name="signin_required">You need to sign in to use the leaderboards.</string>
    <string name="user_score">#<xliff:g example="32" id="position">%d</xliff:g> -
        <xliff:g example="kylewatson98@gmail.com" id="username">%s</xliff:g> -
        <xliff:g example="5.23 days" id="totalTime">%s</xliff:g> waited</string>
    <string name="your_score">#<xliff:g example="103" id="position">%d</xliff:g> -
        You! - <xliff:g example="58.23 months" id="totalTime">%d</xliff:g></string>

    <!-- End of leaderboard strings -->

    <!-- Start of empty strings -->
    <string name="empty_unlocked">It appears you have not got any unlocked rewards. When rewards set reach the date they will be put here and the time will be added to your score.</string>
    <string name="empty_locked">It appears you have not got any rewards added. Use the add button at the bottom of the screen to add a new reward.</string>

    <!-- End of empty strings -->


    <!-- Start of settings strings -->
    <!--
    - Confirmation before deleting
     *       - pre-emptive notification
     *       - feedback/suggestions
     -->
    <string name="title_activity_settings">Settings</string>
    <string name="preference_file_key">com.example.kyle.patiencetraining.PREFERENCE_FILE</string>
    <string name="data_saver_label">Data-saver (disables automatically loading images from links)</string>
    <string name="data_saver_key">DATASAVER_KEY</string>
    <string name="delete_label">Ask for confirmation before deleting</string>
    <string name="delete_key">DELETE_KEY</string>
    <string name="display_name_label">Name to use on the leaderboard (this is shown to other users who log in)</string>
    <string name="name_key">NAME_KEY</string>
    <string name="notification_tone_label">Notification tone</string>
    <string name="notification_uri_key">NOTIFICATION_URI_KEY</string>
    <string name="notification_title_key">NOTIFICATION_TITLE_KEY</string>
    <string name="notification_time_label">Time to send notification before reward is unlocked</string>
    <string name="about_label">About the app</string>
    <string name="version_label">Version: Beta1.0</string>
    <string name="developer_label">Developer: Kyle Watson \n
                                    Hogeschool van Amsterdam \n
                                    kyle.watson@hva.nl</string>

    <!-- End of settings strings -->
</resources>
