<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.SettingsActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/dataImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/dataSaverSwitch"
        app:layout_constraintBottom_toBottomOf="@id/dataSaverSwitch"
        app:srcCompat="@drawable/ic_data" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/dataSaverSwitch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/data_saver_label"
        app:layout_constraintStart_toEndOf="@id/dataImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/deleteImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/deleteSwitch"
        app:layout_constraintBottom_toBottomOf="@id/deleteSwitch"
        app:srcCompat="@drawable/ic_delete" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/deleteSwitch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/delete_label"
        app:layout_constraintStart_toEndOf="@id/deleteImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dataSaverSwitch"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/nameLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/display_name_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deleteSwitch"
        android:labelFor="@id/nameEditText"
        />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameLabel"
        android:importantForAutofill="no"
        android:inputType="text" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/notificationImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/notificationSound"
        app:layout_constraintBottom_toBottomOf="@id/notificationSound"
        app:srcCompat="@drawable/ic_notification" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/notificationSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintStart_toEndOf="@id/notificationImageView"
        app:layout_constraintTop_toBottomOf="@id/nameEditText"
        android:text="@string/notification_tone_label"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/notificationLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintStart_toEndOf="@id/notificationSound"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/notificationSound"
        app:layout_constraintTop_toTopOf="@id/notificationSound"
        android:labelFor="@id/notificationSound"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/aboutImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/aboutLabel"
        app:layout_constraintBottom_toBottomOf="@id/aboutLabel"
        app:srcCompat="@drawable/ic_info" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/aboutLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintStart_toEndOf="@id/aboutImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notificationSound"
        android:text="@string/about_label"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/versionLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toEndOf="@id/aboutImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutLabel"
        android:text="@string/version_label"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/developerLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toEndOf="@id/aboutImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/versionLabel"
        android:text="@string/developer_label"
        />

</androidx.constraintlayout.widget.ConstraintLayout>